--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			<!-- intro -->
 			<div class="intro">
 				<!-- avatar image -->
-				<img src="me.png" style="width: 150px;border-radius: 100px" class="mb-4">
+				<img src="1.jpg" style="width: 150px;border-radius: 100px" class="mb-4">
 
 				<!-- info -->
 				<h1 class="mb-2 mt-0">Akshita Sarma</h1>
@@ -167,7 +167,7 @@
 				<div class="col-md-3">
 					<div class="text-center text-md-left">
 						<!-- avatar image -->
-						<img src="me.png" style="width: 150px;border-radius: 100px" class="mb-4">
+						<img src="1.jpg" style="width: 150px;border-radius: 100px" class="mb-4">
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30" style="height: 30px;"></div>
 				</div>
@@ -572,7 +572,7 @@
 
 					<h3 class="wow fadeInUp" style="color: white;visibility: visible; animation-name: fadeInUp;">Victor Cardoz</h3>
 				    <hr style="border: 0.5px solid white;">
-					<img src="me.png" style="display: inline-block; width: 100px;border-radius: 100px" class="mb-4">
+					<img src="2.jpg" style="display: inline-block; width: 100px;border-radius: 100px" class="mb-4">
             		<p style="margin: 5px; color: white; display: inline-block;">Please free feel to contact me on my social handles</p>
 
 				</div>
